[gd_scene load_steps=7 format=2]

[ext_resource path="res://games/Ooks/ui/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://mainmenu/theme/theme_eggplant.tres" type="Theme" id=2]
[ext_resource path="res://mainmenu/theme/style_panel_bg.tres" type="StyleBox" id=3]
[ext_resource path="res://games/Ooks/ui/controller4.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://mainmenu/art/font/kenpixel/mini.ttf"

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = SubResource( 1 )

[node name="GameMenu" type="Popup"]
pause_mode = 2
margin_right = 167.0
margin_bottom = 220.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Controller4" type="Sprite" parent="Node2D"]
position = Vector2( 316, 120 )
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="Node2D"]
margin_left = 216.0
margin_top = 61.0
margin_right = 315.0
margin_bottom = 101.0
custom_colors/default_color = Color( 0.882353, 0.254902, 0.254902, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Move"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Node2D"]
margin_left = 220.0
margin_top = 141.0
margin_right = 319.0
margin_bottom = 181.0
custom_colors/default_color = Color( 0.223529, 0.521569, 0.352941, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Drop"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Node2D"]
margin_left = 316.0
margin_top = 131.0
margin_right = 415.0
margin_bottom = 171.0
custom_colors/default_color = Color( 0.219608, 0.596078, 1, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "jump"
scroll_active = false

[node name="RichTextLabel4" type="RichTextLabel" parent="Node2D"]
margin_left = 345.0
margin_top = 76.0
margin_right = 444.0
margin_bottom = 116.0
custom_colors/default_color = Color( 0.74902, 0.247059, 0.701961, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "crouch"
scroll_active = false

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -83.5
margin_top = -110.0
margin_right = 84.5
margin_bottom = 110.0
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 169.0
margin_bottom = 221.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 154.0
margin_bottom = 206.0

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 154.0
margin_bottom = 20.0
text = "PAUSED"
align = 1

[node name="ContinueButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 154.0
margin_bottom = 82.0
text = "Continue"

[node name="RestartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 86.0
margin_right = 154.0
margin_bottom = 144.0
text = "Restart"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 148.0
margin_right = 154.0
margin_bottom = 206.0
text = "Quit to Menu"
